# nyc-open-data

./: README.md  docker-compose.yaml  pyproject.toml
dbt_nyc_open_data/: dbt_project.yml
dbt_nyc_open_data/models/nyc_open_data/: nyc_open_data__311_requests.sql  schema.yml  sources.yml
ingestion/: extract_nyc_open_data.py  load_nyc_open_data.py
